--- a/UI pROJECT.ipynb
+++ b/UI pROJECT.ipynb
@@ -548,6 +548,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "3de3b951",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:7: SyntaxWarning: invalid escape sequence '\\G'\n",
+      "<>:7: SyntaxWarning: invalid escape sequence '\\G'\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_8288\\928592437.py:7: SyntaxWarning: invalid escape sequence '\\G'\n",
+      "  df = pd.read_csv('D:\\GitHub\\M6.csv')\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_8288\\928592437.py:7: DtypeWarning: Columns (2,4,18,19,27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv('D:\\GitHub\\M6.csv')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² Score: 0.3376490509472416\n",
+      "Mean Absolute Error: 11040.160273145255\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error\n",
+    "\n",
+    "# Load your cleaned data\n",
+    "df = pd.read_csv('D:\\GitHub\\M6.csv')\n",
+    "\n",
+    "# Convert necessary columns to float\n",
+    "for col in ['S_LOAD', 'C_LOAD', 'TO_UNIT', 'TOTAL_BILL']:\n",
+    "    df[col] = df[col].astype(str).str.replace(',', '').astype(float)\n",
+    "\n",
+    "# Drop rows with missing values\n",
+    "df = df[['S_LOAD', 'C_LOAD', 'TO_UNIT', 'TOTAL_BILL']].dropna()\n",
+    "\n",
+    "# Features and target\n",
+    "X = df[['S_LOAD', 'C_LOAD', 'TO_UNIT']]\n",
+    "y = df['TOTAL_BILL']\n",
+    "\n",
+    "# Train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Train model\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predictions\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluation\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "\n",
+    "print(\"R² Score:\", r2)\n",
+    "print(\"Mean Absolute Error:\", mae)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "06998d69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['insurance_model.pkl']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add this after your model training\n",
+    "import joblib\n",
+    "\n",
+    "# Save the model\n",
+    "joblib.dump(model, 'insurance_model.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "84de7ead",
    "metadata": {},
